--- a/templates/single_prediction.html
+++ b/templates/single_prediction.html
@@ -1,1 +1,43 @@
-<h1>Person is: {{result}}</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ML API - Diabetes Prediction Result</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo">
+  <style>
+    body {
+      background-color: #f5f5f5;
+      font-family: 'Arimo', sans-serif;
+      margin: 0;
+      display: flex;
+      justify-content: flex-start; /* Align content to the left */
+      align-items: center;
+      height: 100vh;
+      background: url('https://dlabs.ai/wp-content/uploads/2020/11/diabetes.png');
+    }
+
+    .result-container {
+      text-align: left;
+      padding: 70px;
+      box-sizing: border-box;
+    }
+
+    h1 {
+      font-family: 'Lobster', cursive;
+      font-size: 3em;
+      color: #3498db;
+      margin: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="result-container">
+    <h1>Person is: {{result}}</h1>
+  </div>
+</body>
+
+</html>
