--- a/templates/home.html
+++ b/templates/home.html
@@ -1,43 +1,96 @@
 <!DOCTYPE html>
-<html >
-<!--From https://codepen.io/frytyler/pen/EGdtg-->
+<html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>ML API</title>
-  <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Hind:300' rel='stylesheet' type='text/css'>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ML API - Diabetes Prediction</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Arimo">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hind:300">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300">
+<style>
+  body {
+    background-color: #f5f5f5;
+    font-family: 'Arimo', sans-serif;
+    margin: 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100vh;
+    background: url('https://dlabs.ai/wp-content/uploads/2020/11/diabetes.png') ;
+  }
 
+  .login {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+    width: 25%;
+    margin-left: 10%;
+  }
+
+  h1 {
+    font-family: 'Pacifico', cursive;
+    color: #3498db;
+  }
+
+  form {
+    margin-top: 20px;
+  }
+
+  input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+
+  button {
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+
+  button:hover {
+    background-color: #2980b9;
+  }
+
+  .result {
+    margin-top: 20px;
+    font-size: 18px;
+    color: #2ecc71;
+  }
+</style>
 
 </head>
 
 <body>
- <div class="login">
-	<h1>Diabetes Prediction</h1>
-
-     <!-- Main Input For Receiving Query to our ML -->
+  <div class="login">
+    <h1>Diabetes Prediction</h1>
+    <!-- Main Input For Receiving Query to our ML -->
     <form action="{{ url_for('predict_datapoint')}}" method="post">
       <input type="text" name="Pregnancies" placeholder="Pregnancies" required="required" /><br>
-    	<input type="text" name="Glucose" placeholder="Glucose" required="required" /><br>
-        <input type="text" name="BloodPressure" placeholder="BloodPressure" required="required" /><br>
-        <input type="text" name="SkinThickness" placeholder="SkinThickness" required="required" /><br>
-        <input type="text" name="Insulin" placeholder="Insulin" required="required" /><br>
-        <input type="text" name="BMI" placeholder="BMI" required="required" /><br>
-        <input type="text" name="DiabetesPedigreeFunction" placeholder="DiabetesPedigreeFunction" required="required" /><br>
-        <input type="text" name="Age" placeholder="Age" required="required" /><br>
-
-
-        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+      <input type="text" name="Glucose" placeholder="Glucose" required="required" /><br>
+      <input type="text" name="BloodPressure" placeholder="BloodPressure" required="required" /><br>
+      <input type="text" name="SkinThickness" placeholder="SkinThickness" required="required" /><br>
+      <input type="text" name="Insulin" placeholder="Insulin" required="required" /><br>
+      <input type="text" name="BMI" placeholder="BMI" required="required" /><br>
+      <input type="text" name="DiabetesPedigreeFunction" placeholder="DiabetesPedigreeFunction" required="required" /><br>
+      <input type="text" name="Age" placeholder="Age" required="required" /><br>
+      <button type="submit">Predict</button>
     </form>
-<body>
-
-   <br>
-   <br>
-
-
- </div>
- {{result}}
-
+    <div class="result">
+      {{result}}
+    </div>
+  </div>
 </body>
+
 </html>
